fjord-compiler/test/errors/MissingExpressionEnum.fj
module test.errors.MissingExpressionEnum

enum A
  B : A
  C : A

missing : Int
missing = 
 